Updated resume and resume instructions for making changes on Mac

--- a/resume.tex
+++ b/resume.tex
@@ -43,44 +43,48 @@
 
 %		Computer Skills and software
 
-\section{COMPUTER \\ SKILLS} {\sl Languages :} Java, SQL, React, Ruby, Javascript, XML, Hibernate
+\section{COMPUTER \\ SKILLS} {\sl Languages :} Java, SQL, ReactJS, Javascript, Ruby, Hibernate
 
                {\sl Software:}  
 			\hangindent=2em
 			\hangafter=1
-			JBoss, Node.js, JQuery, Spring, PostgreSQL, Oracle, \newline Powershell, Chef, Linux, Windows, Mac OS X, Android
+			JBoss, Docker, Node.js, Spring, PostgreSQL, Powershell, \newline 
+			Chef, Puppet, Linux, Windows, Mac OS X, Android, GIT, Docker
 			
 	%   SAIC Experience
 %          image triming  is for croping the image; order of numbers defined as [left, bottom, right, top]
 %	  slanted text boxes left for potential future use and can see the section headers clearly
 \section{RELATED EXPERIENCE} {\sl  \includegraphics[scale=0.015, trim=110 200 110 120]{resume_images/SAIC_logo_RGB-lg.jpg}} \hfill January 2015 - Present \\
-                Software Engineer \\
-                McLean, VA
+                Senior Software Engineer \\
+                McLean, VA - Reston, VA
                  \begin{itemize}  \itemsep -2pt % reduce space between items
-              \item   Worked with a DoD Secret Clearance on a Navy tactical decision
-			aid application for mine warfare and mine counter measures.
-	      \item   Developed java and SQL back end code and xhtml front end code
-			using rich faces.
-	      \item   Developed front end code using Bootstrap, JQuery, React, and 
-			Openlayers 3 for a rewrite effort of an old tech stack.
-	      \item   Worked with AD LDS instances for authenticating users, JBoss, \newline
-			Hibernate, NSIS, Rich Faces, React, and Openlayers.
+              \item   Worked on DoD applications that required a Secret clearance.
+	      \item   Developed and provided technical approaches for \newline
+	      		implementations for a team of engineers (DevOps, Functional, etc).
+	      \item   Developed production code using Java, React, SQL, HTML, \newline
+	      		Ext JS, Powershell, NSIS, and Ruby.
+	      \item   Integrated an application to use Chef, JQuery, and 
+			Openlayers 3 for a tech stack refresh.
+	      \item   Integrated applications with JBoss, Puppet, Chef, NSIS, Jenkins,
+	      		Apache, Tomcat, Openlayers, PostgreSQL, and AD LDS for 
+			authenticating users.
 	      \item   Independently developed a chef project for automated \newline 
-			deployment of project code, enabling a push to production \newline
+			deployment of project code, enabling pushes to production \newline
 			from development in 10 minutes.
-	      \item  Stood up development pipelines for automated testing and \newline
-		        production of software artifacts using Gitlab, Jenkins Pipeline, \newline
-                        Chef, Nexus, SonarQube, Selenium, and VSphere.
-	      \item   Developed a new non-destructive installer which would retain a \newline
-                        previous instance's data (used Flyway, Windows Powershell,\newline
-                        Postgres functionality, retaining data from Wildfly and Hibernate search).
+	      \item   Stood up development pipelines for automated testing and \newline
+		        building software using Gitlab, Jenkins Pipeline, Chef, Nexus,
+		        SonarQube, Selenium, and VSphere.
+	      \item   Developed non-destructive install capability which would retain \newline
+                         a previous instance's data across versions (using Flyway, Windows \newline
+                         Powershell, and Postgres functionality to retain data from Wildfly and 
+                         Hibernate searches).
               \item   Wrote Cucumber, Selenium, and testng test scripts for regression \newline
 			testing application during nightly build and a automated \newline 
-			immediate build.
+			build.
+	      \item   Resolved information security technical issues to meet DoD \newline
+			compliance (SSL, FIPS approved ciphers, certificates).
 	      \item   Worked directly with the customer on testing and supporting \newline
 			customer efforts in office and at the customer site.
-	      \item   Implemented new changes and fixes for a fielded legacy system \newline
-                        (using Sybase and Java).
                 \end{itemize}
  
 \pagebreak
