--- a/resume.tex
+++ b/resume.tex
@@ -43,48 +43,44 @@
 
 %		Computer Skills and software
 
-\section{COMPUTER \\ SKILLS} {\sl Languages :} Java, SQL, ReactJS, Javascript, Ruby, Hibernate
+\section{SKILLS} {\sl Languages :} Java, SQL, ReactJS, Javascript, Ruby, Hibernate
 
                {\sl Software:}  
 			\hangindent=2em
 			\hangafter=1
-			JBoss, Docker, Node.js, Spring, PostgreSQL, Powershell, \newline 
-			Chef, Puppet, Linux, Windows, Mac OS X, Android, GIT, Docker
+			AWS, Docker, Node.js, Spring, PostgreSQL, Powershell, \newline 
+			Chef, Puppet, Selenium, JBoss, Linux, Windows, Mac OS X, \newline 
+                                Android, GIT, Agile, Scrum, Jira
 			
 	%   SAIC Experience
 %          image triming  is for croping the image; order of numbers defined as [left, bottom, right, top]
 %	  slanted text boxes left for potential future use and can see the section headers clearly
-\section{RELATED EXPERIENCE} {\sl  \includegraphics[scale=0.015, trim=110 200 110 120]{resume_images/SAIC_logo_RGB-lg.jpg}} \hfill January 2015 - Present \\
+\section{ EXPERIENCE} {\sl  \includegraphics[scale=0.015, trim=110 200 110 120]{resume_images/SAIC_logo_RGB-lg.jpg}} \hfill January 2015 - Present \\
                 Senior Software Engineer \\
                 McLean, VA - Reston, VA
                  \begin{itemize}  \itemsep -2pt % reduce space between items
-              \item   Worked on DoD applications that required a Secret clearance.
+                \item   Worked on DoD applications that required a Secret clearance.
 	      \item   Developed and provided technical approaches for \newline
-	      		implementations for a team of engineers (DevOps, Functional, etc).
-	      \item   Developed production code using Java, React, SQL, HTML, \newline
-	      		Ext JS, Powershell, NSIS, and Ruby.
+                                implementations for a team of engineers as a DevOps Lead.
+	      \item   Developed production application code using Java, React, SQL, \newline
+                                HTML, Ext JS, Powershell, NSIS, and Ruby.
 	      \item   Integrated an application to use Chef, JQuery, and 
-			Openlayers 3 for a tech stack refresh.
+                                Openlayers 3 for mapping.
 	      \item   Integrated applications with JBoss, Puppet, Chef, NSIS, Jenkins,
-	      		Apache, Tomcat, Openlayers, PostgreSQL, and AD LDS for 
-			authenticating users.
+                               Apache, Tomcat, Openlayers, PostgreSQL, and authentication for users.
 	      \item   Independently developed a chef project for automated \newline 
-			deployment of project code, enabling pushes to production \newline
-			from development in 10 minutes.
-	      \item   Stood up development pipelines for automated testing and \newline
-		        building software using Gitlab, Jenkins Pipeline, Chef, Nexus,
-		        SonarQube, Selenium, and VSphere.
-	      \item   Developed non-destructive install capability which would retain \newline
-                         a previous instance's data across versions (using Flyway, Windows \newline
-                         Powershell, and Postgres functionality to retain data from Wildfly and 
-                         Hibernate searches).
-              \item   Wrote Cucumber, Selenium, and testng test scripts for regression \newline
-			testing application during nightly build and a automated \newline 
-			build.
-	      \item   Resolved information security technical issues to meet DoD \newline
-			compliance (SSL, FIPS approved ciphers, certificates).
-	      \item   Worked directly with the customer on testing and supporting \newline
-			customer efforts in office and at the customer site.
+                                deployment of project code, reducing time required for\newline
+                                pushes to production by over 90\%.
+	      \item   Stood up software development pipelines with automated testing \newline
+                               and building software using Gitlab, Jenkins Pipeline, Chef, Nexus,
+                               SonarQube, Selenium, and VSphere.
+	      \item   Developed non-destructive install capability to retain data across\newline
+                               versions (using Flyway, Windows Powershell, and Postgres). 
+                \item   Wrote Cucumber, Selenium, and testng test scripts for regression \newline
+                               testing application during nightly build and a automated \newline 
+                               build.
+	      \item   Resolved information security issues to meet DoD compliance\newline
+                               (SSL, FIPS approved ciphers, certificates).
                 \end{itemize}
  
 \pagebreak
@@ -96,18 +92,18 @@
                 Software Developer Specialist \\
                 Arlington, VA
                  \begin{itemize}  \itemsep -2pt % reduce space between items
-              \item   Developed a manifest upload and processing application for
-			 the US Postal Service using Agile based methodologies including scrum.
-              \item   Installed and configured Jenkins using Chef Ruby scripts and \newline
-			 Vagrant to automatically install and configure a server running on a VM
+                \item   Developed a manifest upload and processing application for
+                               the US Postal Service using Agile based methodologies including scrum.
+                \item   Leveraged Jenkins using Chef Ruby scripts and Vagrant\newline
+                               to automatically install and configure a server running on a VM
 	      \item   Developed code for consuming REST web services used
-			 in the file upload and processing application.
+                               in the file upload and processing application.
 	      \item   Developed scripts for automating deployments to IBM WebSphere
-			 using WebSphere’s Jython SOAP API to manage deployments.
+                               using WebSphere’s Jython SOAP API to manage deployments.
 	      \item   Developed Flyway SQL scripts for updating and creating new 
-			 records for supporting deployments.
+                               records for supporting deployments.
 	      \item   Developed code for displaying data on uploaded and processed
-			 files using bootstrap javascript datatables.
+                               files using bootstrap javascript datatables.
                 \end{itemize}
 
 	%  ORACLE Experience
@@ -115,48 +111,43 @@
                 Software Consultant \\ Reston, VA
                 \begin{itemize}  \itemsep -2pt %reduce space between items
                  \item Developed applications using Oracle ADF,
-			 Oracle 11g Database, and Java.
+                               Oracle Database, and Java for multiple project applications.
 	      \item Developed custom web code in Java, Java Script, and JSP for \newline 
-		       updating an existing expense system to 11g technology using \newline 
-                       Oracle Access Manager. (US Census Bureau)
+                               updating an existing expense system to 11g technology using \newline 
+                               Oracle Access Manager. (US Census Bureau)
 	      \item Developed a continuous testing system using Selenium
-			 and set up a continuous integration server (Hudson)
-			 for use with testing web code designed for a
-			 highly available point of sale system. (NetApp)
+                               and set up a continuous integration server (Hudson)
+                               for use with testing web code designed for a
+                               highly available point of sale system. (NetApp)
 	      \item Independently developed a utility with custom Java code for use with
-			 Oracle Content DB for uploading of data, administration
-			 of Content DB, and parsing data.
-			(US Forest Service)
-	      \item Installed and configured systems using Linux, tested capacity
-			 of the installed Content DB software, and tuned the JVM
-			 for use with Oracle Content DB. (US Forest Service)
+                               Oracle Content DB for uploading of data, administration
+                               of Content DB, and parsing data.
+                               (US Forest Service)
       	      \item Developed Java and web code in JSFFs using Oracle ADF for \newline
-                       consuming SOAP web services in a highly available system. \newline 
-                       (Oregon Health Care Exchange)
+                               consuming SOAP web services in a highly available system. \newline 
+                               (Oregon Health Care Exchange)
 	      \item Developed portlet code in JSP for an investor portal. \newline
-			(Lincoln Financial)
+                               (Lincoln Financial)
 	      \item Helped new hires orient and become familiar with internal 
-			Oracle policies and workings in a mentor type of role.
+                               Oracle policies and workings in a mentor type of role.
 	      \item Presented training sessions on latest web application testing \newline
-			 techniques.
+                               techniques.
                  \end{itemize} 
+
+\pagebreak
 
 	%  NIST Experience
 	     {\sl \includegraphics[scale=0.07]{resume_images/645px-NIST_logo.png}} \hfill            June 2009 - December 2010 \\
                 Student Temporary Employment Program \\ Gaithersburg, MD
                 \begin{itemize}  \itemsep -2pt %reduce space between items
-                 \item Developed a rule engine for verification of standards
-			 for the \newline semiconductor manufacturing industry (ISMI)
-    			using JBoss and Drools.
+                 \item Developed a rule engine for verification of standards for the \newline
+                               International Sematech Manufacturing Initiative (ISMI) using JBoss
+                               and Drools.
                  \item Wrote Java code for the backend of the application, aided
-			 with development of the user interface,
-    			created test cases, and resolved issues.
-                 \item Delivered the initial version of developed software to ISMI
-			 for use with validating metadata of semiconductor
-			 manufacturing \newline equipment.
-                 \item Worked with ISMI, to develop standards and rules that would
-			 better fit the data set after seeing the
-    			results of the tool that was developed.
+                               with development of the user interface,
+                               created test cases, and resolved issues.
+                 \item Worked with ISMI to develop standards and rules that would
+                               better fit data sets after analysis from the developed tool.
                  \end{itemize} 
 
 	%  AIT Experience
@@ -164,25 +155,25 @@
                 Web Developer Intern \\ Columbia, MD
                   \begin{itemize}   \itemsep -2pt %reduce space between items
                  \item Created and designed web pages for clients using
-			 HTML, CSS, PHP, JSP, and ASP.
+                               HTML, CSS, PHP, JSP, and ASP.
                  \item Resolved bugs in web code built for clients.
-                 \item Provided maintenance for web pages, programs, and/or databases.
-                 \item Used proprietary software, SQL tags, for embedding
-			SQL calls in Java web applications and web
-  			Code to develop web applications.
+                 \item Maintained web pages, programs, and/or databases.
+                 \item Leveraged proprietary software, SQL tags, for embedding
+                               SQL calls in Java web applications and web
+                               Code to develop web applications.
                    \end{itemize} 
 
 	%  UMD RA Experience
-\section{OTHER EXPERIENCE} {\sl \includegraphics[scale=0.07]{resume_images/UMD_primary[Converted].png}} \hfill August 2007 - May 2010 \\
+\section{OTHER} {\sl \includegraphics[scale=0.07]{resume_images/UMD_primary[Converted].png}} \hfill August 2007 - May 2010 \\
                 Resident Assistant \\
                 College Park, MD
                  \begin{itemize}  \itemsep -2pt % reduce space between items
                  \item   Served on a duty system as the first response to student crisis situations.
                  \item   Developed and fostered community interactions through planned student activites.
-	         \item   Encouraged a safe community by promoting responsibility and enforcing residence hall policies.
-	         \item   Resolved conflicts amongst residents using conflict resolution \newline
-	                    techniques.
-	         \item   Provided support for about 30 freshmen and sophmores.
+	       \item   Encouraged a safe community by promoting responsibility and enforcing residence hall policies.
+	       \item   Resolved conflicts amongst residents using conflict resolution \newline
+                               techniques.
+	       \item   Provided support for about 30 freshmen and sophmores.
                 \end{itemize}
 
 \section{EDUCATION}
