Minor reorganization of skills section

--- a/resume.tex
+++ b/resume.tex
@@ -43,14 +43,14 @@
 
 %		Computer Skills and software
 
-\section{SKILLS} {\sl Languages :} Java, SQL, ReactJS, Javascript, Ruby, Hibernate
+\section{SKILLS} {\sl Languages :} Java, SQL, ReactJS, Javascript, Ruby
 
                {\sl Software:}  
 			\hangindent=2em
 			\hangafter=1
-			AWS, Docker, Node.js, Spring, PostgreSQL, Powershell, \newline 
+			AWS, Docker, Node.js, Spring, PostgreSQL, Hibernate, \newline 
 			Chef, Puppet, Selenium, JBoss, Linux, Windows, Mac OS X, \newline 
-                                Android, GIT, Agile, Scrum, Jira
+                                Android, Powershell, GIT, Agile, Scrum, Jira
 			
 	%   SAIC Experience
 %          image triming  is for croping the image; order of numbers defined as [left, bottom, right, top]
