Added comment on section

--- a/resume.tex
+++ b/resume.tex
@@ -18,6 +18,7 @@
 
 %Place holder for a side element for the header
 %\pagestyle{fancy}
+% SAIC HEADER
 %\rhead {Mason.Matthew.S.603422.01\symbol{95}14\symbol{95}15}
 
 \begin{document}
