--- a/resume.tex
+++ b/resume.tex
@@ -57,31 +57,35 @@
 %          image triming  is for croping the image; order of numbers defined as [left, bottom, right, top]
 %	  slanted text boxes left for potential future use and can see the section headers clearly
 \section{ EXPERIENCE} {\sl  \includegraphics[scale=0.015, trim=110 200 110 120]{resume_images/SAIC_logo_RGB-lg.jpg}} \hfill January 2015 - Present \\
-                Senior Software Engineer \\
-                McLean, VA - Reston, VA
+                \textbf{Dev Ops Lead} 
                  \begin{itemize}  \itemsep -2pt % reduce space between items
                 \item   Worked on DoD applications that required a Secret clearance.
 	      \item   Developed and provided technical approaches for \newline
-                                implementations for a team of engineers as a DevOps Lead.
+                                implementations for a team of engineers.
+	      \item   Stood up software development pipelines with automated testing \newline
+                               and building software using Gitlab, Jenkins Pipeline, Chef, Nexus,
+                               SonarQube, Selenium, and VSphere.
+	      \item   Resolved information security issues to meet DoD compliance\newline
+                               (SSL, FIPS approved ciphers, certificates).
+                \end{itemize}
+                
+                \textbf{Senior Software Engineer} 
+                 \begin{itemize}  \itemsep -2pt % reduce space between items
 	      \item   Developed production application code using Java, React, SQL, \newline
                                 HTML, Ext JS, Powershell, NSIS, and Ruby.
-	      \item   Integrated an application to use Chef, JQuery, and 
-                                Openlayers 3 for mapping.
+	      \item   Developed mapping application with Openlayers 3 and React.
 	      \item   Integrated applications with JBoss, Puppet, Chef, NSIS, Jenkins,
                                Apache, Tomcat, Openlayers, PostgreSQL, and authentication for users.
 	      \item   Independently developed a chef project for automated \newline 
                                 deployment of project code, reducing time required for\newline
-                                pushes to production by over 90\%.
+                                pushes to production in 10 minutes.
 	      \item   Stood up software development pipelines with automated testing \newline
                                and building software using Gitlab, Jenkins Pipeline, Chef, Nexus,
                                SonarQube, Selenium, and VSphere.
 	      \item   Developed non-destructive install capability to retain data across\newline
                                versions (using Flyway, Windows Powershell, and Postgres). 
-                \item   Wrote Cucumber, Selenium, and testng test scripts for regression \newline
-                               testing application during nightly build and a automated \newline 
-                               build.
-	      \item   Resolved information security issues to meet DoD compliance\newline
-                               (SSL, FIPS approved ciphers, certificates).
+                \item   Wrote Cucumber, Selenium, and testng test scripts for automated \newline
+                               regression testing.
                 \end{itemize}
  
 \pagebreak
@@ -90,8 +94,7 @@
 %          image triming  is for croping the image; order of numbers defined as [left, bottom, right, top]
 %	  slanted text boxes left for potential future use and can see the section headers clearly
 	      {\sl  \includegraphics[scale=0.1, trim=110 200 110 120]{resume_images/accenture-logo.jpg}} \hfill April 2014 - December 2014 \\
-                Software Developer Specialist \\
-                Arlington, VA
+                \textbf{Software Developer Specialist}
                  \begin{itemize}  \itemsep -2pt % reduce space between items
                 \item   Developed a manifest upload and processing application for
                                the US Postal Service using Agile based methodologies including scrum.
@@ -109,7 +112,7 @@
 
 	%  ORACLE Experience
                 {\sl \includegraphics[scale=0.1]{resume_images/663px-Oracle_logo.png}} \hfill            February 2011 - March 2014 \\
-                Software Consultant \\ Reston, VA
+                \textbf{Software Consultant}
                 \begin{itemize}  \itemsep -2pt %reduce space between items
                  \item Developed applications using Oracle ADF,
                                Oracle Database, and Java for multiple project applications.
@@ -139,7 +142,7 @@
 
 	%  NIST Experience
 	     {\sl \includegraphics[scale=0.07]{resume_images/645px-NIST_logo.png}} \hfill            June 2009 - December 2010 \\
-                Student Temporary Employment Program \\ Gaithersburg, MD
+                \textbf{Student Temporary Employment Program}
                 \begin{itemize}  \itemsep -2pt %reduce space between items
                  \item Developed a rule engine for verification of standards for the \newline
                                International Sematech Manufacturing Initiative (ISMI) using JBoss
@@ -153,7 +156,7 @@
 
 	%  AIT Experience
                 {\sl \includegraphics[scale=0.2] {resume_images/ait_inc_logo.png}} \hfill        May 2004 - August 2005 \\
-                Web Developer Intern \\ Columbia, MD
+                \textbf{Web Developer Intern}
                   \begin{itemize}   \itemsep -2pt %reduce space between items
                  \item Created and designed web pages for clients using
                                HTML, CSS, PHP, JSP, and ASP.
@@ -166,8 +169,7 @@
 
 	%  UMD RA Experience
 \section{OTHER} {\sl \includegraphics[scale=0.07]{resume_images/UMD_primary[Converted].png}} \hfill August 2007 - May 2010 \\
-                Resident Assistant \\
-                College Park, MD
+                \textbf{Resident Assistant}
                  \begin{itemize}  \itemsep -2pt % reduce space between items
                  \item   Served on a duty system as the first response to student crisis situations.
                  \item   Developed and fostered community interactions through planned student activites.
