Small DevOps Lead changes and edits

--- a/resume.tex
+++ b/resume.tex
@@ -57,14 +57,15 @@
 %          image triming  is for croping the image; order of numbers defined as [left, bottom, right, top]
 %	  slanted text boxes left for potential future use and can see the section headers clearly
 \section{ EXPERIENCE} {\sl  \includegraphics[scale=0.015, trim=110 200 110 120]{resume_images/SAIC_logo_RGB-lg.jpg}} \hfill January 2015 - Present \\
-                \textbf{Dev Ops Lead} 
+                \textbf{DevOps Lead} 
                  \begin{itemize}  \itemsep -2pt % reduce space between items
                 \item   Worked on DoD applications that required a Secret clearance.
-	      \item   Developed and provided technical approaches for \newline
+	      \item   Developed and provided technical approaches and \newline
                                 implementations for a team of engineers.
-	      \item   Stood up software development pipelines with automated testing \newline
-                               and building software using Gitlab, Jenkins Pipeline, Chef, Nexus,
-                               SonarQube, Selenium, and VSphere.
+               \item   Organized and directed a team following agile methodology.
+	      \item   Implemented software development pipelines with automated \newline
+                               testing and building software using Gitlab, Jenkins Pipeline, Chef, 
+                               Nexus, SonarQube, Selenium, Nexus, and VSphere.
 	      \item   Resolved information security issues to meet DoD compliance\newline
                                (SSL, FIPS approved ciphers, certificates).
                 \end{itemize}
@@ -79,9 +80,6 @@
 	      \item   Independently developed a chef project for automated \newline 
                                 deployment of project code, reducing time required for\newline
                                 pushes to production in 10 minutes.
-	      \item   Stood up software development pipelines with automated testing \newline
-                               and building software using Gitlab, Jenkins Pipeline, Chef, Nexus,
-                               SonarQube, Selenium, and VSphere.
 	      \item   Developed non-destructive install capability to retain data across\newline
                                versions (using Flyway, Windows Powershell, and Postgres). 
                 \item   Wrote Cucumber, Selenium, and testng test scripts for automated \newline
