Minor edits to SAIC experience and removed internship and Resident Assistant sections.  Condensed into 2 pages.

--- a/resume.tex
+++ b/resume.tex
@@ -57,29 +57,35 @@
 %          image triming  is for croping the image; order of numbers defined as [left, bottom, right, top]
 %	  slanted text boxes left for potential future use and can see the section headers clearly
 \section{ EXPERIENCE} {\sl  \includegraphics[scale=0.015, trim=110 200 110 120]{resume_images/SAIC_logo_RGB-lg.jpg}} \hfill January 2015 - Present \\
-                \textbf{DevOps Lead} 
+                \textbf{Dev Ops Lead} 
                  \begin{itemize}  \itemsep -2pt % reduce space between items
-                \item   Worked on DoD applications that required a Secret clearance.
-	      \item   Developed and provided technical approaches and \newline
-                                implementations for a team of engineers.
-               \item   Organized and directed a team following agile methodology.
-	      \item   Implemented software development pipelines with automated \newline
-                               testing and building software using Gitlab, Jenkins Pipeline, Chef, 
-                               Nexus, SonarQube, Selenium, Nexus, and VSphere.
+	      \item   Developed and provided technical approaches and guidance for \newline
+                                security and architecture to a team of engineers.
+                 \item   Maintained an agile backlog for a team of engineers and lead the
+                             agile development process for DevOps.
+	      \item   Stood up software development pipelines and automated testing \newline
+                               for building software using Gitlab, Docker, Jenkins Pipeline, Chef, 
+                               Nexus, Flyway, SonarQube, Selenium, and VSphere.
+                 \item  Wrote Puppet code and modules responsible for configuring  \newline
+                               application to interface with numerous datasources.
 	      \item   Resolved information security issues to meet DoD compliance\newline
-                               (SSL, FIPS approved ciphers, certificates).
+                               (TLS, SSL, FIPS approved ciphers, certificates).
                 \end{itemize}
                 
                 \textbf{Senior Software Engineer} 
                  \begin{itemize}  \itemsep -2pt % reduce space between items
+	      \item   Worked on DoD applications that required a Secret clearance.
 	      \item   Developed production application code using Java, React, SQL, \newline
                                 HTML, Ext JS, Powershell, NSIS, and Ruby.
 	      \item   Developed mapping application with Openlayers 3 and React.
 	      \item   Integrated applications with JBoss, Puppet, Chef, NSIS, Jenkins,
-                               Apache, Tomcat, Openlayers, PostgreSQL, and authentication for users.
+                               Apache, Tomcat, Openlayers, PostgreSQL, and authentication.
 	      \item   Independently developed a chef project for automated \newline 
                                 deployment of project code, reducing time required for\newline
                                 pushes to production in 10 minutes.
+	      \item   Stood up software development pipelines with automated testing \newline
+                               and building software using Gitlab, Jenkins Pipeline, Chef, Nexus,
+                               SonarQube, Selenium, and VSphere.
 	      \item   Developed non-destructive install capability to retain data across\newline
                                versions (using Flyway, Windows Powershell, and Postgres). 
                 \item   Wrote Cucumber, Selenium, and testng test scripts for automated \newline
@@ -135,47 +141,6 @@
 	      \item Presented training sessions on latest web application testing \newline
                                techniques.
                  \end{itemize} 
-
-\pagebreak
-
-	%  NIST Experience
-	     {\sl \includegraphics[scale=0.07]{resume_images/645px-NIST_logo.png}} \hfill            June 2009 - December 2010 \\
-                \textbf{Student Temporary Employment Program}
-                \begin{itemize}  \itemsep -2pt %reduce space between items
-                 \item Developed a rule engine for verification of standards for the \newline
-                               International Sematech Manufacturing Initiative (ISMI) using JBoss
-                               and Drools.
-                 \item Wrote Java code for the backend of the application, aided
-                               with development of the user interface,
-                               created test cases, and resolved issues.
-                 \item Worked with ISMI to develop standards and rules that would
-                               better fit data sets after analysis from the developed tool.
-                 \end{itemize} 
-
-	%  AIT Experience
-                {\sl \includegraphics[scale=0.2] {resume_images/ait_inc_logo.png}} \hfill        May 2004 - August 2005 \\
-                \textbf{Web Developer Intern}
-                  \begin{itemize}   \itemsep -2pt %reduce space between items
-                 \item Created and designed web pages for clients using
-                               HTML, CSS, PHP, JSP, and ASP.
-                 \item Resolved bugs in web code built for clients.
-                 \item Maintained web pages, programs, and/or databases.
-                 \item Leveraged proprietary software, SQL tags, for embedding
-                               SQL calls in Java web applications and web
-                               Code to develop web applications.
-                   \end{itemize} 
-
-	%  UMD RA Experience
-\section{OTHER} {\sl \includegraphics[scale=0.07]{resume_images/UMD_primary[Converted].png}} \hfill August 2007 - May 2010 \\
-                \textbf{Resident Assistant}
-                 \begin{itemize}  \itemsep -2pt % reduce space between items
-                 \item   Served on a duty system as the first response to student crisis situations.
-                 \item   Developed and fostered community interactions through planned student activites.
-	       \item   Encouraged a safe community by promoting responsibility and enforcing residence hall policies.
-	       \item   Resolved conflicts amongst residents using conflict resolution \newline
-                               techniques.
-	       \item   Provided support for about 30 freshmen and sophmores.
-                \end{itemize}
 
 \section{EDUCATION}
 
