Added DevOps certification and minor edits to include AWS experience and Angular experience.

--- a/resume.tex
+++ b/resume.tex
@@ -44,14 +44,14 @@
 
 %		Computer Skills and software
 
-\section{SKILLS} {\sl Languages :} Java, SQL, ReactJS, Javascript, Ruby
+\section{SKILLS} {\sl Languages :} Java, SQL, Javascript, Ruby
 
                {\sl Software:}  
 			\hangindent=2em
 			\hangafter=1
-			AWS, Docker, Node.js, Spring, PostgreSQL, Hibernate, \newline 
-			Chef, Puppet, Selenium, JBoss, Linux, Windows, Mac OS X, \newline 
-                                Android, Powershell, GIT, Agile, Scrum, Jira
+			AWS, Docker, Node.js, React, Angular, Spring, PostgreSQL,\newline 
+			Hibernate, Chef, Puppet, Selenium, JBoss, Linux, Windows, \newline
+			Mac OS X, Powershell, GIT, Agile, Scrum, Jira, Confluence
 			
 	%   SAIC Experience
 %          image triming  is for croping the image; order of numbers defined as [left, bottom, right, top]
@@ -77,7 +77,7 @@
 	      \item   Worked on DoD applications that required a Secret clearance.
 	      \item   Developed production application code using Java, React, SQL, \newline
                                 HTML, Ext JS, Powershell, NSIS, and Ruby.
-	      \item   Developed mapping application with Openlayers 3 and React.
+	      \item   Developed an application with a Severless architecture using AWS.
 	      \item   Integrated applications with JBoss, Puppet, Chef, NSIS, Jenkins,
                                Apache, Tomcat, Openlayers, PostgreSQL, and authentication.
 	      \item   Independently developed a chef project for automated \newline 
@@ -118,8 +118,6 @@
                 {\sl \includegraphics[scale=0.1]{resume_images/663px-Oracle_logo.png}} \hfill            February 2011 - March 2014 \\
                 \textbf{Software Consultant}
                 \begin{itemize}  \itemsep -2pt %reduce space between items
-                 \item Developed applications using Oracle ADF,
-                               Oracle Database, and Java for multiple project applications.
 	      \item Developed custom web code in Java, Java Script, and JSP for \newline 
                                updating an existing expense system to 11g technology using \newline 
                                Oracle Access Manager. (US Census Bureau)
@@ -136,8 +134,6 @@
                                (Oregon Health Care Exchange)
 	      \item Developed portlet code in JSP for an investor portal. \newline
                                (Lincoln Financial)
-	      \item Helped new hires orient and become familiar with internal 
-                               Oracle policies and workings in a mentor type of role.
 	      \item Presented training sessions on latest web application testing \newline
                                techniques.
                  \end{itemize} 
@@ -162,6 +158,26 @@
 			
               		{\sl  Bachelor of Science,} Physics                  2010 \\
  			University of Maryland, College Park, MD
+			
+			}}}
+ 		\end{multicols}
+\section{CERTS}
+
+		\begin{multicols}{2}
+			{\makebox[2\columnwidth]{%
+			   \parbox{\textwidth}{%
+			   \setlength\topsep{0pt} % removes the extra spaces created by the center environment
+ 			   \setlength\parskip{0pt}
+				\includegraphics[scale=0.45, trim=0 0 0 50]{resume_images/devops_institute.png}
+			}}}
+
+			{\makebox[0.55\columnwidth]{%
+			   \parbox{1.0\textwidth}{%
+			   \setlength\topsep{0pt} % removes the extra spaces created by the center environment
+ 			   \setlength\parskip{0pt}
+			
+			{\sl  DevOps Foundation} \newline
+                		DevOpsInstitute
 			
 			}}}
  		\end{multicols}
