Edited SAIC DevOps Lead to highlight leadership experience

--- a/resume.tex
+++ b/resume.tex
@@ -50,46 +50,45 @@
 			\hangindent=2em
 			\hangafter=1
 			AWS, Docker, Node.js, React, Angular, Spring, PostgreSQL,\newline 
-			Hibernate, Chef, Puppet, Selenium, JBoss, Linux, Windows, \newline
-			Mac OS X, Powershell, GIT, Agile, Scrum, Jira, Confluence
+			Hibernate, Gitlab, Jenkins Pipeline, Chef, Puppet, Selenium, \newline
+			Nexus, SonarQube, Selenium, JBoss, Linux, Windows, \newline
+			Mac OS X, Powershell, GIT, Agile, Scrum, Jira, Confluence\newline
 			
 	%   SAIC Experience
 %          image triming  is for croping the image; order of numbers defined as [left, bottom, right, top]
 %	  slanted text boxes left for potential future use and can see the section headers clearly
 \section{ EXPERIENCE} {\sl  \includegraphics[scale=0.015, trim=110 200 110 120]{resume_images/SAIC_logo_RGB-lg.jpg}} \hfill January 2015 - Present \\
-                \textbf{Dev Ops Lead} 
+                \textbf{DevOps Lead} 
                  \begin{itemize}  \itemsep -2pt % reduce space between items
-	      \item   Developed and provided technical approaches and guidance for \newline
-                                security and architecture to a team of engineers.
-                 \item   Maintained an agile backlog for a team of engineers and lead the
-                             agile development process for DevOps.
-	      \item   Stood up software development pipelines and automated testing \newline
+	      \item   Provided technical approaches and guidance for architecture \newline
+                                and security to a team of engineers.
+                 \item   Maintained a backlog and led a team of engineers and \newline
+                             administrators with an agile methodology for DevOps.
+	      \item   Led development of automated software testing and pipelines \newline
                                for building software using Gitlab, Docker, Jenkins Pipeline, Chef, 
                                Nexus, Flyway, SonarQube, Selenium, and VSphere.
-                 \item  Wrote Puppet code and modules responsible for configuring  \newline
-                               application to interface with numerous datasources.
-	      \item   Resolved information security issues to meet DoD compliance\newline
-                               (TLS, SSL, FIPS approved ciphers, certificates).
+                 \item  Led Puppet development responsible for installation and \newline
+                               configuration of applications.
+               \item  Reviewed code from multiple developers and outlined code quality \newline
+                               standards and guidelines for code review.
+	      \item   Architected information security solutions to meet DoD \newline
+                              compliance (TLS, SSL, FIPS approved ciphers, certificates).
                 \end{itemize}
                 
                 \textbf{Senior Software Engineer} 
                  \begin{itemize}  \itemsep -2pt % reduce space between items
-	      \item   Worked on DoD applications that required a Secret clearance.
 	      \item   Developed production application code using Java, React, SQL, \newline
                                 HTML, Ext JS, Powershell, NSIS, and Ruby.
-	      \item   Developed an application with a Severless architecture using AWS.
+	      \item   Developed applications with a Severless architecture using AWS.
 	      \item   Integrated applications with JBoss, Puppet, Chef, NSIS, Jenkins,
                                Apache, Tomcat, Openlayers, PostgreSQL, and authentication.
-	      \item   Independently developed a chef project for automated \newline 
-                                deployment of project code, reducing time required for\newline
-                                pushes to production in 10 minutes.
-	      \item   Stood up software development pipelines with automated testing \newline
-                               and building software using Gitlab, Jenkins Pipeline, Chef, Nexus,
-                               SonarQube, Selenium, and VSphere.
+	      \item   Developed a chef project for automated deployment of project \newline 
+                                code, reducing time required for pushes to production in 10 min.
 	      \item   Developed non-destructive install capability to retain data across\newline
                                versions (using Flyway, Windows Powershell, and Postgres). 
                 \item   Wrote Cucumber, Selenium, and testng test scripts for automated \newline
                                regression testing.
+	      \item   Worked on DoD applications that required a Secret clearance.
                 \end{itemize}
  
 \pagebreak
