--- a/resume.tex
+++ b/resume.tex
@@ -44,20 +44,33 @@
 
 %		Computer Skills and software
 
-\section{SKILLS} {\sl Languages :} Java, SQL, Javascript, Ruby
+\section{SYNOPSIS} {\sl Clearance :} Secret
+
+	       {\sl Languages :} Java, SQL, Javascript, Ruby
 
                {\sl Software:}  
 			\hangindent=2em
 			\hangafter=1
 			AWS, Docker, Node.js, React, Angular, Spring, PostgreSQL,\newline 
-			Hibernate, Gitlab, Jenkins Pipeline, Chef, Puppet, Selenium, \newline
-			Nexus, SonarQube, Selenium, JBoss, Linux, Windows, \newline
+			Hibernate, Gitlab, Jenkins Pipeline, Chef, Puppet, Selenium, Nexus,\newline
+			SonarQube, Selenium, JBoss, Apache, Tomcat, Linux, Windows,\newline
 			Mac OS X, Powershell, GIT, Agile, Scrum, Jira, Confluence\newline
-			
+
+%   NG Experience
+%          image triming  is for croping the image; order of numbers defined as [left, bottom, right, top]
+%	  slanted text boxes left for potential future use and can see the section headers clearly
+\section{ EXPERIENCE} {\sl  \includegraphics[scale=0.115, trim=10 10 25 25]{resume_images/Northrop_Grumman-2020-black-logo.jpeg}} \hfill April 2020 - Present \\
+                \textbf{Senior Principal Software Engineer} 
+                 \begin{itemize}  \itemsep -2pt % reduce space between items
+	         \item   Provided technical solutions and guidance for SecDevOps \newline
+                                with a team of engineers.
+                \end{itemize}
+
+
 	%   SAIC Experience
 %          image triming  is for croping the image; order of numbers defined as [left, bottom, right, top]
 %	  slanted text boxes left for potential future use and can see the section headers clearly
-\section{ EXPERIENCE} {\sl  \includegraphics[scale=0.015, trim=110 200 110 120]{resume_images/SAIC_logo_RGB-lg.jpg}} \hfill January 2015 - Present \\
+{\sl  \includegraphics[scale=0.015, trim=110 200 110 120]{resume_images/SAIC_logo_RGB-lg.jpg}} \hfill January 2015 - April 2020 \\
                 \textbf{DevOps Lead} 
                  \begin{itemize}  \itemsep -2pt % reduce space between items
 	      \item   Provided technical approaches and guidance for architecture \newline
@@ -80,15 +93,12 @@
 	      \item   Developed production application code using Java, React, SQL, \newline
                                 HTML, Ext JS, Powershell, NSIS, and Ruby.
 	      \item   Developed applications with a Severless architecture using AWS.
-	      \item   Integrated applications with JBoss, Puppet, Chef, NSIS, Jenkins,
-                               Apache, Tomcat, Openlayers, PostgreSQL, and authentication.
 	      \item   Developed a chef project for automated deployment of project \newline 
                                 code, reducing time required for pushes to production in 10 min.
 	      \item   Developed non-destructive install capability to retain data across\newline
                                versions (using Flyway, Windows Powershell, and Postgres). 
                 \item   Wrote Cucumber, Selenium, and testng test scripts for automated \newline
                                regression testing.
-	      \item   Worked on DoD applications that required a Secret clearance.
                 \end{itemize}
  
 \pagebreak
